[package]
name = "mariadb-version-manager-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.*", features = ["derive", "env"] }
clap-markdown = "0.1.3"
const_format = "0.2.31"
version-manager-rs = { path = "../version-manager-rs" }
