[package]
name = "mariadb-version-manager-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.*", features = ["derive", "env"] }
clap-markdown = "0.1.*"
const_format = "0.2.*"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.*", features = ["serde_derive"] }
serde_json = "1.0.*"
version-manager-rs = { path = "../version-manager-rs" }
url = "2.4.1"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
lazy_static = "1.4.0"
